--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="es">
   <head>
     <meta charset="UTF-8" />
@@ -10,15 +10,16 @@
         padding: 0;
         box-sizing: border-box;
       }
-      
-      body, html {
+
+      body,
+      html {
         margin: 0;
         padding: 0;
         width: 100%;
         height: 100%;
         overflow-x: hidden;
       }
-      
+
       #root {
         width: 100%;
         min-height: 100vh;
